[package]
name = "bevy_dtm"
description = "Bevy support for the DTM 16 bit image format"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["multimedia::images", "game-engines", "rendering"]
keywords = ["gamedev", "bevy", "dtm", "graphics", "image"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev"]
repository = "https://github.com/ku95/bevy_dtm"

[dependencies]
# bevy = { git="https://github.com/bevyengine/bevy" }
bevy = { workspace = true }
dtm = { path="../dtm" }
anyhow = "1.0"
bytemuck = "1.12"
